# agryco

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md  scrapy.cfg  test.ipynb
agryco/: scripts.py
scrapy_app/: items.py  middlewares.py  models.py  pipelines.py  settings.py
scrapy_app/spiders/: categories_spiders.py  items_spiders.py  products_spiders.py
scrapy_app/spiders/output/: sub_category.jsonl
