[tool.poetry]
name = "agryco"
version = "0.1.0"
description = ""
authors = ["calledphilly <ybikouta@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scrapy = "^2.12.0"
lxml = "^5.3.0"
numpy = "^2.2.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
networkx = "^3.4.2"
scrapy-user-agents = "^0.1.1"
playwright = "^1.49.1"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
